--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.1.1
   firebase_core: ^1.6.0
   provider: ^6.0.1
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
