--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^1.6.0
   provider: ^6.0.1
   flutter_spinkit: ^5.1.0
+  google_sign_in: ^5.1.1
 
 dev_dependencies:
   flutter_test:
