--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.1
   flutter_spinkit: ^5.1.0
   google_sign_in: ^5.1.1
+  github_sign_in: ^0.0.4
 
 dev_dependencies:
   flutter_test:
